<resources>
    <string name="app_name">SignUpForm</string>
    <string name="Username">Username</string>
    <string name="Username_Input">Please enter your username</string>
    <string name="Submit">Submit</string>
    <string name="password">Password:</string>
    <string name="Confirm_Password">Confirm Password:</string>
    <string name="Password_Input">Please enter your password</string>
    <string name="Confirm_Input">Please confirm your password</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>
